--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-sass": "^4.0.2"
+  },
+  "dependencies": {
+    "wow.js": "^1.2.2"
   }
 }
